@@ -8,7 +8,7 @@ Range::Merge - Merges ranges of data including subset/superset ranges
 
 =head1 VERSION
 
-version 2.242740
+version 2.253530
 
 =head1 SYNOPSIS
 
@@ -111,7 +111,7 @@ Joelle Maslak <jmaslak@antelope.net>
 
 =head1 COPYRIGHT AND LICENSE
 
-This software is copyright (c) 2016-2021 by Joelle Maslak.
+This software is copyright (c) 2016-2025 by Joelle Maslak.
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
