@@ -1,4 +1,6 @@
 {{$NEXT}}
+ Joelle Maslak <jmaslak@antelope.net>
+ * [Bugfix] Improper handling of some overlaps!
 
 2.242740  2024-09-30 16:48:35-06:00 America/Denver
  Joelle Maslak <jmaslak@antelope.net>
